
2008-04-16 - Release Version: 0.0.6.14
	
	- Bugfix - Re-initialize processor when console panel is not found
	- Bugfix - Add custom stylesheet to console panel on showPanel()

2008-04-16 - Release Version: 0.0.6.10

	- Added feature to allow custom processors to define their own logging templates
	- Moved trace logging template into default processor

2008-04-13 - Release Version: 0.0.6.9

	- Implemented full PHP stack trace logging with variable inspection for fb.php

2008-04-12 - Release Version: 0.0.6.8

  - Bugfix - Parsing of header data in old format
  - Bugfix - Adding and removing of FirePHP/X.X.X in User-Agent request header

2008-04-11 - Release Version: 0.0.6.7

  - New FirePHP client in form of jQuery plugin to be used in Jaxer server environment
	- Bugfix - Console logging with different tabs and windows open and detached firebug window
	- Updated custom code loading verification to allow different hosts for renderer and processor URL's

2008-04-09 - Release Version: 0.0.6.6

	- Enabled loading of custom renderers and processors from third part hosts if explicitly allowed by user

2008-04-09 - Release Version: 0.0.6.5

	- Bugfix for Firebug version 1.05

2008-04-09 - Release Version: 0.0.6.4

	- Updated security model to allow default renderer and processor without explicit action by user
  - Change json data parsing from eval() to json_parse()
  - Misc bug fixes to improve reliability
  - Updated default renderer for server tab
  - Updated data parsing and default renderer and processor to work with new fb() PHP function
  - Implemented sorting of data headers based on numeric index
  - The default processor will now fail gracefully if there is a problem logging the data
	- The log mode string for console messages in the default processor is now case-insensitive

2008-04-07 - Release Version: 0.0.6.3

	- Implemented request processor that is called for every request in the background
	- Renamed headers to start with X-...