@@ -186,10 +186,20 @@ html = '<style>                                  '+
        '  #'+key+' DIV      { display: inline; } '+
        '  #'+key+' DIV.name { cursor:pointer;  } '+
        '  #'+key+' DIV.hide { display: none;   } '+
+       '  #'+key+' DIV#header { display: block; border: 1px solid #D7D7D7; background-color: #D7D7D7; padding: 0px; padding-top: 2px; padding-left: 0px; margin-bottom: 10px; } '+
+       '  #'+key+' DIV#header DIV { display: inline; cursor: pointer; background-color: white; margin-right: 1px; padding: 2px; padding-left: 5px; padding-right: 5px; font-family: Lucida Grande, Tahoma, sans-serif; font-weight: bold; color: #565656; } '+
+       '  #'+key+' DIV#header DIV:hover { color: blue; } '+
+       '  #'+key+' DIV#header DIV.selected { background-color: LightYellow; } '+
+       '  #'+key+' DIV#body { display: block; min-height: 20px; } '+
+       '  #'+key+' DIV#body.loading { margin-left: 10px; background: url(chrome://firebug/skin/loading_16.gif) no-repeat; } '+
+       '  #'+key+' DIV#body.nodata { margin-left: 10px; color: gray; } '+
        '</style>                                 '+
        '<div id="'+key+'">                       ';
 			 
-html += print_r(key,data);
+html += '<div id="header"><div id="variables">Variables</div><div id="messages">Messages</div><div id="mod_rewrite">Mod Rewrite</div><div id="all">All</div></div>';
+html += '<div id="body"></div>';
+
+//html += print_r(key,data);
 html += '</div>';
 
 /* 
@@ -202,15 +212,55 @@ FirePHPRenderer.Init = function() {
  * Called once for each request when "Server" tab is clicked
  */
 FirePHPRenderer.InitRequest = function(Key) {
-  $('#'+Key+' DIV.name').bind("click", function(e) {
-    var obj = $('#'+Key+' #'+Key+$(this).attr('key')+'k');
-    obj.css('display',
-            (obj.css('display')=='none')?
-            'inline':'none');
-    var obj = $('#'+Key+' #'+Key+$(this).attr('key')+'v');
-    obj.css('display',
-            (obj.css('display')=='none')?
-            'inline':'none');
+  $('#'+Key+' DIV#header DIV').bind("click", function(e) {
+    $('#'+Key+' DIV#header DIV').removeClass('selected');
+    $(this).addClass('selected');
+    
+    var body_value = null;
+    
+    switch($(this).attr('id')) {
+      case 'variables':
+        body_value = data['FirePHP.Dump'];
+        break;
+      case 'messages':
+        body_value = data['FirePHP.Firebug.Console'];
+        break;
+      case 'mod_rewrite':
+        body_value = data['org.apache.httpd.mod_rewrite'];
+        break;
+      case 'all':
+        body_value = data;
+        break;
+    }
+    
+    var obj = $('#' + Key + ' DIV#body');
+    obj.removeClass('nodata');
+    obj.removeClass('loading');
+    if (body_value) {
+      obj.html('&nbsp;');
+      obj.addClass('loading');
+      setTimeout(function()
+        {
+          obj.html(print_r(Key, body_value));
+          
+          $('#'+Key+' DIV#body DIV.name').bind("click", function(e) {
+            var obj = $('#'+Key+' DIV#body #'+Key+$(this).attr('key')+'k');
+            obj.css('display',
+                    (obj.css('display')=='none')?
+                    'inline':'none');
+            var obj = $('#'+Key+' DIV#body #'+Key+$(this).attr('key')+'v');
+            obj.css('display',
+                    (obj.css('display')=='none')?
+                    'inline':'none');
+          });
+          
+          obj.removeClass('loading');
+        },100);
+    } else {
+      obj.addClass('nodata');
+      obj.html('No Data Available');
+    }
   });
+  
+  $('#'+Key+' DIV#header DIV#variables').click();
 }
-
